--- a/style.css
+++ b/style.css
@@ -2,9 +2,21 @@
     padding: 0;
     margin: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+}
+body {
+    align-items: center;
+    margin: 0px;
+    justify-content: center;
+    height: 100vh;
+    background: black;
+    display: flex;
+    font-family: 'Open Sans', sans-serif;
+    background-image: url('https://source.unsplash.com/1600x900/?landscape');
+    font-size: 120%;
 }
 .container{
-    background-color: rgb(21, 70, 204);
+    background-color: rgb(204, 21, 125);
     height: 100vh;
     width: 100vw;
 }
@@ -13,10 +25,13 @@
     margin: 10px 0;
 }
 .card{
+    opacity: 0.7;
+    position: relative;
+    background: transparent;
     width: 30vw;
     max-width: 470px;
     min-height: 400px;
-    background-color: cyan;
+    background: #666666d0;;
     margin: 100px auto;
     padding: 50px 50px;
     text-align: center;
